# strategient-architect

./: README.md
assets/: distributed_backtest_system.sarch.json  quant_system_architecture.sarch.json  sample_complex_architecture.puml  sample_complex_project.sarch.json  sample_graphviz_project.sarch.json  sample_project.sarch.json  sample_project_v2.sarch.json
assets/monaco/: dot-language.js  editor.html  monaco-loader.js  plantuml-language.js  qwebchannel.js
assets/plantuml/: sample_infra.puml
assets/plantuml/themes/: strategient.puml
assets/shapes/: shapes-catalog.json
assets/theme/: strategient-dark.qss
docs/: cursor_agent_session_02_repo_skeleton.md  cursor_agent_session_03_ir_persistence_pages.md  cursor_agent_session_04_diagram_canvas_rendering.md  cursor_agent_session_05_plantuml_render_preview.md  cursor_agent_session_06_infra_config_page_provider_webui.md  cursor_agent_session_07_scheduler_page_allocation_runners.md  cursor_agent_session_08_backtest_sweeps_page_results_store.md  cursor_agent_session_09_cursor_agent_orchestration_guardrails.md  cursor_agent_session_1.md  cursor_agent_session_3.1_monoco_editor.md  cursor_agent_session_4.5_replace_plantuml_with_graphviz.md  cursor_strategient_architect_applicatio.md  strategient_architect_draft_v1.md  strategient_architect_draft_v2.md
engine/: Cargo.toml
engine/include/: engine.h
engine/src/: lib.rs
scripts/: build_all.sh  plantuml_render.sh
studio/: CMakeLists.txt  resources.qrc
studio/src/: DiagramPlaceholder.cpp  DiagramPlaceholder.hpp  DiagramScene.cpp  DiagramScene.hpp  DiagramView.cpp  DiagramView.hpp  DocumentModel.cpp  DocumentModel.hpp  DotParser.cpp  DotParser.hpp  EdgeItem.cpp  EdgeItem.hpp  GraphvizRenderer.cpp  GraphvizRenderer.hpp  LayoutOptimizer.cpp  LayoutOptimizer.hpp  MainWindow.cpp  MainWindow.hpp  MonacoBridge.cpp  MonacoBridge.hpp  MonacoEditorWidget.cpp  MonacoEditorWidget.hpp  NodeItem.cpp  NodeItem.hpp  PagesSidebar.cpp  PagesSidebar.hpp  PlantUMLParser.cpp  PlantUMLParser.hpp  PlantUMLPreview.cpp  PlantUMLPreview.hpp  PlantUMLRenderer.cpp  PlantUMLRenderer.hpp  ProjectModel.cpp  ProjectModel.hpp  RunConsole.cpp  RunConsole.hpp  main.cpp
